--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -52,7 +52,7 @@
     html,
     :host {
         -webkit-text-size-adjust: 100%;
-        -ms-text-size-adjust: 100%;
+        -moz-text-size-adjust: 100%;
         text-size-adjust: 100%;
     }
 }
